# Telebotbot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: bot_instance.py  config.py  main.py
src/app/: states.py  text_vars_handlers_.py
src/app/handlers/: handlers.py
src/app/services/: registration.py
src/app/services/one_reason_handlers/: one_reason.py
src/app/utils/: keyboards.py  utils.py
src/configs/: commands.py  commands.yaml
src/database/: database.py  db_sessions.py  models.py
src/middleware/: README.md
src/middleware/i18n_middleware/: i18n_base_middleware.py  my_translator.py
src/middleware/locales/en/LC_MESSAGES/: messages.po
src/middleware/locales/fr/LC_MESSAGES/: messages.po
src/middleware/locales/it/LC_MESSAGES/: messages.po
src/middleware/locales/ru/LC_MESSAGES/: messages.po
telebot_examples/: STATE_EXAMPLE.py
